Site readability overhaul, theme revamp (including color and links), organization fixes, bug fixes, etc. All-around made the site decent enough to be good.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,111 +1,226 @@
 
-html {
-	background-image: url("../images/COVER.jpeg");
-	background-size: cover;
-	background-attachment: fixed;
-	/*
-	width: 100%;
-	height: 100%;
-	*/
-	margin: 0px;
-	padding: 0px;
-	overflow-x: hidden;
-	/*
-	text-align: center;
-	*/
-	margin-left: auto;
-	margin-right: auto;
-}
+/***
 
-body {
-	/*
-	margin: 0px;
-	padding: 0px;
-	overflow-x: auto;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	background-image: url("images/COVER.jpeg");
-	background-attachment: fixed;
-	background-size: cover;
-	background-color: black;
-	*/
-	color: white;
-	line-height: 1.3;
-	font-size: 1.5em;
-}
+		PAGE COLORS:
+		#AEDCDF "light-blue white"
+		#B1AF8F "light olive"
+		#AD2E57 "raspberry"
+		#44191b "maroon"
+		#20060F "dark maroon"
+		#805962 "dull maroon"
+		#433139 "brown"
 
-/*
-.top-left {
-	/*
-	position: absolute;
-	top: 8px;
-	left: 16px;
-	*/
-	/*
-	width: 95%;
-	*/
-	/*color: white;*/
-	/*
-	font-size: 18px;
-	*/
-	/*line-height: 1.3;*/
-	/*
-	margin: auto;
-	*/
-}
-*/
+											***/
 
-.background {
-	width: 100%;
-}
 
-a {
-	background-color: white;
-	border-radius:4px;
-	border: 1px dotted black;	
-}
 
-/* unvisited link */
-a:link {
-	color: #44191b;
-}
-
-/* visited link */
-a:visited {
-	color: #ad2e57;
-}
-
-/* mouse over link */
-a:hover {
-	color: #94c481;
-}
-
-/* selected link */
-a:active {
-	color: #805962;
-}
-
+		/* SETUP */
 * {
 	margin: 0;
 	padding: 0;
 }
 
-ul {
-	margin: 10px;
+html {
+	background-image: url("../images/COVER.jpeg");
+	background-size: cover;
+	background-attachment: fixed;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+body {
+	color: #AEDCDF;
+	line-height: 1.3;
+	font-size: 1.5em;
+}
+
+::selection{
+	color:#AD2E57;
+	background-color: #44191b;
+}
+
+
+
+		/* LINKS */
+a:link {
+	color: #AD2E57;
+	background:none;
+	border: 1px dotted #B1AF8F;
+	border-radius:4px;
+	padding:4px;
+	text-decoration:none;
+}
+
+li.zines a:link{
+	background:none;
+	border:none;
+}
+
+li.bios a:link{
+	color: #AD2E57;
+	border: 1px dotted #B1AF8F;
+	border-radius: 4px;
+	padding: 1px;
+	text-decoration:none;
+}
+
+li.friends a:link{
+	background:none;
+	border:none;
+}
+
+a.heart{
+	border:none;
+}
+
+h2 a:link{
+	color: #AD2E57;
+	background:none;
+	text-decoration:none;
+}
+
+a:visited {
+	color: #AD2E57;
+	border-color:#B1AF8F;
+}
+
+h2 a:visited{
+	color:#AD2E57;
+	background:none;
+}
+
+a:hover {
+	color: #AEDCDF;
+}
+
+h2 a:hover{
+	color:#AEDCDF;
+}
+
+a:active {
+	color: #805962;
+}
+
+h2 a:active{
+	color:#805962;
+}
+
+
+		/* BODY TEXT */
+p,h1,h2,ul{
+	border: 1px dotted #AEDCDF;
+	border-radius:4px;
+	padding:5px;
+	background-color:#20060F;
+	color:#B1AF8F;
+}
+
+		/* PARAGRAPHS */
+p{
+	padding:14px;
+}
+
+p {
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	margin-bottom: 14px;
+	margin-top: 14px;
+}
+
+p.zines {
+	width: 100%;
+	border:none;
+}
+
+p.bios{
+	text-align: center;
+}
+
+p.bios a{
+	line-height: 1.9em;
+	white-space:nowrap;
+	margin:10px;
 	padding: 5px;
-	list-style-position: inside;
-	text-align: justify;
-	margin-left: 30%;
-	width: 40%;
+}
+
+p.bios a:visited{
+	border-color: #B1AF8F;
+}
+
+p.bios a:active{
+	color:#AD2E57;
+	background-color: #B1AF8F;
+	border-color:#AEDCDF;
+}
+
+p.friends {
+	width: 100%;
+	border:none;
+}
+
+
+
+		/* HEADINGS */
+h1{
+	font-size:250%;
+	width: 500px;
+	margin: auto;
+	margin-bottom: 25px;
+	text-align: center;
+}
+
+h1#title{
+		margin-top: 25px;
+		padding: 3px;
+}
+
+h2{
+	width:400px;
+	margin-top:100px;
+	margin-bottom: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding-bottom: 5px;
+	box-sizing:border-box;
+}
+
+h2.wideh2{
+	width:600px;
+}
+
+		/* LISTS */
+ul {
+	margin: auto;
+	margin-bottom: 20px;
+	padding: 5px;
+	list-style-position:inside;
+	text-align: left;
+	width: 60%;
 }
 
 ul#zines{
-	width: 100%;
 	margin: auto;
 	display: flex;
 	justify-content: center;
-	border: none;
+	border: 1px dotted #AEDCDF;
+	border-radius:4px;
+}
+
+ul#friends{
+	margin: auto;
+	margin-top:20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px dotted #AEDCDF;
+	border-radius:4px;
 }
 
 li {
@@ -113,9 +228,8 @@ li {
 	padding: 1px;
 }
 
-#heart {
-	margin: 10px;
-	margin-bottom: 30px;
+li.bios{
+	line-height: 1.7em;
 }
 
 li.zines{
@@ -123,7 +237,40 @@ li.zines{
 	margin: 5px;
 	margin-bottom: 20px;
 	text-align: left;
-	border:none; 
+	border:none;
+}
+
+li.friends{
+	display: inline;
+	margin: 5px;
+	margin-bottom: 20px;
+	text-align: left;
+	border:none;
+}
+
+
+
+		/* DIVs & SPANs */
+div.caption{
+text-align: center;
+text-decoration: none;
+font-size:70%;
+position:relative;
+top:-38px;
+}
+
+span.lightblue{
+	color:#AEDCDF;
+}
+
+
+
+		/* IMAGES */
+img {
+	display: block;
+	margin: auto;
+	border-radius:5px;
+	border:1px dotted black;
 }
 
 img.zines{
@@ -131,64 +278,36 @@ img.zines{
 	border:none;
 }
 
-.nobullet{
-	margin-left: auto;
-	margin-right: auto;
+img.friends{
+	border:1px dotted #AEDCDF;
+}
+
+img#CLMP{
+	width: 250px;
+}
+
+img#Duotrope{
+	width: 250px;
+}
+
+img#heart {
+	width: 100px;
+	margin:auto;
+	border:1px dotted #20060F;
+}
+
+
+
+		/* SPACING */
+br.tall{
 	display: block;
-	text-align: justify;
-	list-style: none;
+	content: "";
+	margin-top: 10px;
 }
 
-h1 {
-	width: 50%;
-	margin: auto;
-	text-align: center;
-	padding-top: 25px;
-}
 
-h2 {
-	text-decoration: underline;
-	margin-top: 25px;
-	margin-bottom: 0;
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	padding-bottom: 15px;
-}
 
-h3 {
-	text-decoration: underline;
-	font-size: 24px;
-	font-weight: normal;
-	margin-top: 0;
-}
-
-.bios {
-	display: inline;
-	margin: 5px;
-	text-shadow: 4px 4px 1px black;
-	text-shadow: 4px 4px 6px white;
-	box-shadow: 4px 4px 7x black;
-	white-space: nowrap;
-	border-radius:4px;
-}
-
-p {
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 15px;
-	margin-bottom: 20px;
-	text-align: left;
-	margin-bottom: 20px;
-}
-
-p.zines {
-	width: 100%;
-	border:none;	
-}
-
+		/* BIO PAGE */
 p#bio {
 	display: block;
 	text-align: left;
@@ -198,62 +317,12 @@ p#bio {
 	top: 22%;
 }
 
-br.tall{
-	display: block;
-	content: "";
-	margin-top: 10px;
-}
 
 
-img {
-	display: block;
-	margin: auto;
-	border-radius:5px;
-	border:1px dotted black;
-	/*
-	float:left;
-	*/
-}
-
-img#heart {
-	width: 100px;
-	margin:auto;
-	border:1px dotted black;
-}
-
-img#CLMP{
-	width: 250px;
-}
-
+		/* ABOUT THE AUTHOR PAGE */
 img#me{
 	width: 200px;
 	margin: auto;
 	display: flex;
-}
-
-table{
-	text-align: center;
-	padding: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-	width: 60%;
-}
-
-th{
-	padding: 5px;
-	font-weight: 100;
-}
-
-td{
-	padding: 5px;
-}
-
-div.caption{
-	text-align: center;
-	text-decoration: none;
-	font-size:70%;
-	position:relative;
-	top:-45px;
-	
+	border: 1px dotted #44191b;
 }
